# phone-address-api

./: Dockerfile  README.md  Second_Task.md  docker-compose.yml  pyproject.toml
phoneaddress/: __init__.py  app.py  config.py  keyval.py  schema.py  schemas.py  storage.py
src/: app.py
tests/: phoneaddress.py
